# budoux.obj2

./: .gitignore  Cargo.toml  README.md  about.hbs  aulua.yaml  aviutl2.toml  logo.aup2  mise.toml  translation.aul2
.github/workflows/: release.yml
i18n/: English.budoux-obj2.aul2
src/: bisect.rs  budoux.rs  evaluate_chars.rs  layout.rs  lib.rs  lua_handle.rs  main.lua  segment.rs
src/model/: README.md
